<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/text"
        android:gravity="center"
        android:text="@string/text_send_custom1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       />
    <EditText
        android:id="@+id/editText"
        android:hint="test@test.test"
        android:gravity="center_horizontal"
        android:ellipsize="start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editText"
        android:gravity="center">
        <Button
            android:id="@+id/dialogButtonYes"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/dialogButtonNo"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>


</RelativeLayout>
